fixed spacing extend error

--- a/app/assets/stylesheets/helpers/margin/_margin-x.scss
+++ b/app/assets/stylesheets/helpers/margin/_margin-x.scss
@@ -1,4 +1,4 @@
-@each $size in 0, xs, sm, md, lg, xl {
+@each $size in 0, 2xs, xs, sm, md, lg, xl, 2xl {
   %margin-x__#{$size} {
     @extend %margin-right__#{$size};
     @extend %margin-left__#{$size};
